** tagged as ATARI800_1_3_1

2003-09-04  Petr Stehlik  <pstehlik@sophics.cz>
* configure.ac: svgalib target added
* SVGAlib target dropped from Debian and RPM build scripts
* -rc1 removed from everywhere, it was causing pain for the build scripts
* sockets.txt renamed to r_device.txt


** tagged as ATARI800_1_3_1-RC1

2003-09-03  Petr Stehlik  <pstehlik@sophics.cz>
* dos/vga_gfx.h: wrong #endif fixed
* dos/atari_vga.c: cleaned up a bit, added #ifdef SHOW_DISK_LED
* configure_dos.bat: default target and bufferedlog pre-set
* atari.h: version increased to 1.3.1-rc1


2003-08-31  Petr Stehlik  <pstehlik@sophics.cz>
* rdevice.c: GPL header added (hope that it actually was free source before 
  Chris brought it to Atari800 project)

* rt-config.c: R: patch is not enabled by default. It can be enabled in the UI

* ui.c: R: patch named as "Atari850 emulation via network" (better description
  welcome)

* DOC/sockets.txt: this is the explanation of R: - couple of excerpts from
  Atari800 mailing list mails.


2003-08-31  Ed Cogburn  <ecogburn@xtn.net>
* Makefile.in, configure.ac: rdevice.o compiled and linked in only on linux
  or Unix and unless --disable-riodevice was used when configuring.

* devices.c, atari.h: R: is compiled in only if R_IO_DEVICE is defined (see
  configure --enable-riodevice, note that it is defined by default)


2003-08-05  Petr Stehlik  <pstehlik@sophics.cz>
* atari.c: tried to fix a recent security issue (atari800 got famous "thanks"
  to that). In order to provide a complex fix I wrote code that is not looking
  very well but works correctly, hopefully. Nevertheless this fixes only
  the main module arguments parsing - the various ports do it on their own
  and that should be fixed as well. Best by going for GNU getopt!

  Also the osa/osb/xlxe/5200/basic rom loading options were not documented
  in the "-help" list. Fixed.

* atari_sdl.c: refresh_rate unused, removed


2003-08-05  Achim Haertel <achim.haertel@e-technik.tu-chemnitz.de>